--- a/team.html
+++ b/team.html
@@ -76,7 +76,7 @@
             <p class="rank">Developer</p>
             <div class="social-icons">
                 <a href="https://web.facebook.com/msijewel.saif" target="_blank"><i class="fab fa-facebook"></i></a>
-                <a href="https://web.instagram.com/msijewel.saif" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.instagram.com/msijewel.saif" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
 
@@ -86,7 +86,7 @@
             <p class="rank">Designer</p>
             <div class="social-icons">
                 <a href="https://web.facebook.com/msijewel.saif" target="_blank"><i class="fab fa-facebook"></i></a>
-                <a href="https://web.instagram.com/msijewel.saif" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.instagram.com/msijewel.saif" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
 
@@ -96,7 +96,7 @@
             <p class="rank">Manager</p>
             <div class="social-icons">
                 <a href="https://web.facebook.com/msijewel.saif" target="_blank"><i class="fab fa-facebook"></i></a>
-                <a href="https://web.instagram.com/msijewel.saif" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.instagram.com/msijewel.saif" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
     </div>
